Added new route to YAML to handle a query, and implemented it in node
