# backend/src/controllers/superligas.controller.ts
@@ -16,7 +16,18 @@ export async function getEquipos(req: Request, res: Response) {
   if (teams.length === 0) {
     res.status(404).send("No hay equipos registrados");
   } else {
-    res.send(await SuperLiga.getTeams());
+    const teams = await SuperLiga.getTeams();
+    const teamsWithMembers = [];
+    for (const team of teams) {
+      const teamPopulation = await SuperLiga.getMembers((miembros) => {
+        return miembros.equipo === team;
+      });
+      teamsWithMembers.push({
+        equipo: team,
+        miembros: teamPopulation.length,
+      });
+    }
+    res.send(teamsWithMembers);
   }
 }
 
@@ -27,6 +38,60 @@ export async function getPoblacion(req: Request, res: Response) {
   } else {
     res.send(String(poblacion));
   }
+}
+
+export async function getEdadesPromedios(req: Request, res: Response) {
+  const teams = await SuperLiga.getTeams();
+  if (teams.length === 0) {
+    return res.status(404).send("No hay personas registradas");
+  }
+
+  let promedioEdadesPorEquipo = [];
+  for (const team of teams) {
+    const miembrosEquipo = await SuperLiga.getMembers((miembro) => {
+      return miembro.equipo === team;
+    });
+
+    if (miembrosEquipo.length === 0) {
+      return res.status(404).send("No hay miembros del equipo");
+    }
+
+    let promedioEdad = 0,
+      minEdad,
+      maxEdad;
+    for (const miembro of miembrosEquipo) {
+      promedioEdad += Number(miembro.edad);
+
+      if (minEdad === undefined || miembro.edad < minEdad) {
+        minEdad = miembro.edad;
+      }
+
+      if (maxEdad === undefined || miembro.edad > maxEdad) {
+        maxEdad = miembro.edad;
+      }
+    }
+    promedioEdad /= miembrosEquipo.length;
+
+    promedioEdadesPorEquipo.push({
+      equipo: team,
+      cantidadMiembros: miembrosEquipo.length,
+      promedioEdad: Math.floor(promedioEdad),
+      minEdad,
+      maxEdad,
+    });
+  }
+  const finalResponse = promedioEdadesPorEquipo
+    .sort((a, b) => {
+      return b.cantidadMiembros - a.cantidadMiembros;
+    })
+    .map((element) => {
+      return {
+        equipo: element.equipo,
+        minEdad: element.minEdad,
+        maxEdad: element.maxEdad,
+      };
+    });
+  res.send(finalResponse);
 }
 
 export async function getJovenesFutbolerosConLaVidaResuelta(
